--- a/style/main.css
+++ b/style/main.css
@@ -66,14 +66,12 @@ kbd {
     margin: 0;
 }
 
-#Demographics form > div > div {
-    margin: .5em 0;
-}
-#Demographics form > div > div > * {
+select, input:not([type="checkbox"]), textarea {
     width: 100%;
     height: 2em;
     font-size: 1.2em;
     padding: 0 .5em;
+    margin-bottom: .5em;
 }
 
 option[value="blank"] {
