nonweighted trial type selection
* removed weighting of trials in the trial type selection. Now done using simple randomness.

* the keymap will now display during the practice screen and the countdown.

--- a/style/main.css
+++ b/style/main.css
@@ -168,6 +168,10 @@ textarea {
     margin: 0;
 }
 
+#PracticeResponseMap {
+    font-size: 36px;
+}
+
 #CommentsGeneral {
     min-height: 25vh;
     min-width: 50vw;
