--- a/style/main.css
+++ b/style/main.css
@@ -135,6 +135,7 @@ option[value="blank"] {
     vertical-align: middle;
 }
 
+.response-table kbd,
 .response-map kbd {
     font-size: 0.6em;
 }
@@ -160,6 +161,9 @@ option[value="blank"] {
     padding: .2em;
     text-transform: none;
 }
+.practice-response-map .response-table > div > div:nth-of-type(1n+2) {
+    text-align: center;
+}
 .response-table > div > div:last-of-type {
     text-transform: capitalize;
 }
@@ -173,7 +177,7 @@ textarea {
     margin: 0;
 }
 
-#PracticeResponseMap {
+.practice-response-map {
     font-size: 36px;
 }
 
