--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,9 @@
 .hidden {
     display: none !important;
 }
+.bad {
+    background-color: lightcoral;
+}
 body {
     margin: 0;
     height: 100vh;
